CSS fix to put widths back to 100% on mobile in row2cells21 rows

--- a/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles-desktop.css
+++ b/ui.apps/src/main/content/jcr_root/etc/clientlibs/nhmwww/main/css/styles-desktop.css
@@ -11031,7 +11031,12 @@ a.button-cta {
 
 /** overrides headertextimage.scss custom Foundation widths **/
 .row2cells21 .large-8.medium-8.columns, .row2cells12 .large-8.medium-8.columns {
-  width: 65.7%;
+  width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .row2cells21 .large-8.medium-8.columns, .row2cells12 .large-8.medium-8.columns {
+    width: 65.7%;
+  }
 }
 
 /** need to copy carousel caption styles into new grand-summary caption box class, or ideally a generic class to cover carousel/hero/grand-summary caption boxes **/
